tests/lime/fail/tokens/macro_first/byte_51.wsa
macro 3 [push 51] 3
